Fix error double horizontal scroll in grids

--- a/src/app/systelab-components/styles/sass/_agGrid.scss
+++ b/src/app/systelab-components/styles/sass/_agGrid.scss
@@ -69,6 +69,10 @@ $icon-rowaction-font-size: 20px;
   }
 }
 
+.ag-bl-full-height {
+  overflow: hidden;
+}
+
 .ag-fresh .ag-root {
   border: none;
   overflow: hidden;
